# splent_feature_projects

./: MANIFEST.in  pyproject.toml
src/splent_io/splent_feature_projects/: __init__.py  commands.py  config.py  forms.py  hooks.py  models.py  repositories.py  routes.py  seeders.py  services.py  signals.py
src/splent_io/splent_feature_projects/assets/css/: projects.css
src/splent_io/splent_feature_projects/assets/js/: scripts.js  webpack.config.js
src/splent_io/splent_feature_projects/migrations/: env.py
src/splent_io/splent_feature_projects/migrations/versions/: 86d40a785dcd_splent_feature_projects.py
src/splent_io/splent_feature_projects/templates/projects/: detail.html  list.html
src/splent_io/splent_feature_projects/templates/projects/admin/: form.html  list.html
src/splent_io/splent_feature_projects/tests/e2e/: test_browser.py
src/splent_io/splent_feature_projects/tests/functional/: test_routes.py
src/splent_io/splent_feature_projects/tests/integration/: test_repositories.py
src/splent_io/splent_feature_projects/tests/load/: locustfile.py
src/splent_io/splent_feature_projects/tests/unit/: test_services.py
src/splent_io/splent_feature_projects/translations/: messages.pot
src/splent_io/splent_feature_projects/translations/es/LC_MESSAGES/: messages.po
